--- a/index.html
+++ b/index.html
@@ -81,3 +81,29 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Freundliche Seite</title>
+  <style>
+    body {
+      background: #fff8dc;
+      font-family: Georgia, serif;
+      color: #444;
+      padding: 50px;
+      text-align: center;
+    }
+    h1 {
+      color: #d2691e;
+    }
+    p {
+      font-size: 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hey 👋</h1>
+  <p>Schön, dass du hier bist. Diese Seite strahlt Wärme aus!</p>
+</body>
+</html>
